--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   # Firebase core and auth
   cloud_firestore: ^4.4.3
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
