added the qr code with a save button which generates a qr to all the four data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Firebase core and auth
   cloud_firestore: ^4.4.3
   qr_flutter: ^4.0.0
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
