--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,13 @@ dependencies:
   cloud_firestore: ^4.4.3
   qr_flutter: ^4.0.0
   path_provider: ^2.0.13
+  image_gallery_saver: ^1.7.1
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  qr_code_scanner: ^0.5.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
