--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,10 +45,12 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.the.alpha_build_one"
-        minSdkVersion 21
+        minSdkVersion 20
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+
     }
 
     buildTypes {
@@ -67,4 +69,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:31.2.2')
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation("androidx.multidex:multidex:2.0.1")
+
 }
